Fix spacing and sizing issues on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -260,3 +260,10 @@ textarea.form-control {
         padding-top: 25%;
     }
 }
+
+@media (max-width: 676px) {
+  textarea.form-control {
+    width: 91%;
+  }
+
+}
