--- a/coloring-the-universe/css/style.css
+++ b/coloring-the-universe/css/style.css
@@ -692,6 +692,9 @@ input[type=range]::-webkit-slider-thumb {
 /* Small devices (landscape phones, 576px and up)*/
 
 @media (max-width: 676px) {
+  h1 {
+    font-size: 54px;
+  }
   input[type="range"] {
     width: 70%;
   }
@@ -700,6 +703,12 @@ input[type=range]::-webkit-slider-thumb {
   }
   .prism-items {
     width: 70%;
+  }
+  .object-astronaut {
+    width: 75px;
+  }
+  .object-earth {
+    width: 20px;
   }
 
 }
@@ -715,4 +724,5 @@ input[type=range]::-webkit-slider-thumb {
     top: 64px;
     left: -68px;
     transform: rotate(-12deg);
+}
 }
